--- a/TravelBlogs.WEB/Views/Account/Register.cshtml
+++ b/TravelBlogs.WEB/Views/Account/Register.cshtml
@@ -1,49 +1,42 @@
-﻿@model TravelBlogs.WEB.Models.RegisterModel
+﻿@model TravelBlogs.WEB.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Регистрация";
 }
 
-<h2>Register</h2>
-@using(Html.BeginForm())
+<h2>@ViewBag.Title</h2>
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <div>
-        <h4>Регистрация пользователя</h4>
-        <hr />
-        @Html.ValidationSummary(false)
-
-        <div>
-            Электроный адрес
-            <div>
-                @Html.EditorFor(model => model.Email)
-            </div>            
+    <h4>Создайте новую учетную запись. </h4>
+    <hr/>
+    @Html.ValidationSummary("", new { @class = "text-danger"})
+    <div class="form-group">
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m=>m.Email, new { @class = "form-control" })
         </div>
-
-        <div>
-            Пароль
-            <div>
-                @Html.EditorFor(model => model.Password)
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m=>m.Password, new { @class = "form-control"})
         </div>
-
-        <div>
-            Подтвердте пароль
-            <div>
-                @Html.EditorFor(model => model.ConfirmPassword)
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m=>m.ConfirmPassword, new { @class = "form-control" })
         </div>
+    </div>
 
-        <div>
-            Имя
-            <div>
-                @Html.EditorFor(model => model.Name)
-            </div>
-        </div>
-        <div>
-            <div>
-                <input type="submit" value="Зарегестрироваться" />
-            </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-default" value="Регистрация" />
         </div>
     </div>
 }
 
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
