--- a/TravelBlogs.WEB/Views/Post/CreatePost.cshtml
+++ b/TravelBlogs.WEB/Views/Post/CreatePost.cshtml
@@ -15,6 +15,12 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.DisplayBody, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(m => m.DisplayBody, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Body, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextAreaFor(m => m.Body, new { @class = "form-control" })
